--- a/styles/general.sass
+++ b/styles/general.sass
@@ -119,9 +119,10 @@ main
       border: 1px solid #5f5a5a
       font-size: 16px
       text-transform: uppercase
-      margin-left: 10px
+      margin-top: 10px
       font-weight: 600
       background: #dcfff3
+      color:#333
       cursor: pointer
       &:hover
         color: #dcfff3
