--- a/styles/general.sass
+++ b/styles/general.sass
@@ -112,6 +112,7 @@ main
       border-radius: 5px
       border: 1px solid #ccc
       font-size: 16px
+      margin-right: 10px
     button
       border-radius: 5px
       height: 40px
